# CHANGELOG
# ---
# * Add support for PayJunction [Matt Sanders] 
#
# * Change billing_address to shipping_address in PayPal Integration helper, as billing_address was incorrect.  Addresses passed to billing_address for the PayPal helper will no longer be added to the form. This will break existing code, as the address will not be passed.
#
# * Remove switch patterns from card detection that were eliminated on July 1, 2007 [cody]
#
# * Format the issue number in Payflow requests to always be 2 digits [cody]
#
# * Move application_id to Gateway and Helper class respectively [cody]
#
# * Improve TrustCommerce documentation [cody]
#
# * Add credit to Payflow [cody]
#
# * Add support for the Plug 'N Pay gateway [ryan.norbauer, cody]
#
# * Add support for ItemTotal, Shipping, Handling, and Tax amounts in the PayPal Express and PayPal gateways [baldwindavid, cody]
#
# * Add page customization options to the PaypalExpress, and PayflowExpress gateways [ cpjolicoeur, cody]
#
# * Add Verifi gateway [Paul Hepworth]
#
# * Add a PayflowResponse object with a profile_id accessor method.  Return the correct authorization number on recurring actions [cody]
#
# * Add support for an initial transaction with recurring payments [findchris, cody]
#
# * Add support for email receipts to recurring Payflow Payments [Rick Olson]
#
# * Ensure the ButtonSource isn't too long [cody]
#
# * Add ButtonSource to Paypal and PaypalExpress gateways [cody]
#
# * Rename application to application_id and place it on Base, so it can be set once and forgotten about [cody]
#
# * Add ButtonSource field to PayflowExpress gateway [cody]
#
# * Add a field for the bn to the PayPal helper [cody]
#
# * Add remote secure pay test and correctly define test? [cody]
#
# * Undefine unsupported methods from SecurePay [cody]
#
# * Enhance the TransFirst error message for declined transactions [cody]
#
# * Add initial support for TransFirst gateway [cody]
#
# * Deprecate certification_id in Payflow gateways [cody]
#